wso2-ei/tttt/ei-pattern-1/templates/integrator/integrator-deployment.yaml
---
# Source: ei-pattern-1/templates/integrator/integrator-deployment.yaml
# Copyright (c) 2017, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: wso2ei-pattern-1-integrator-deployment
  namespace : wso2-ei
spec:
  replicas:  1
  minReadySeconds: 75
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      deployment: wso2ei-pattern-1-integrator
      app: wso2ei-pattern-1
      monitoring: jmx
  template:
    metadata:
      labels:
        deployment: wso2ei-pattern-1-integrator
        app: wso2ei-pattern-1
        monitoring: jmx
    spec:
      containers:
      - name: wso2ei-integrator        
        image: wso2/wso2ei-integrator:6.6.0
        livenessProbe:
          exec:
            command:
            - /bin/bash
            - -c
            - nc -z localhost 9443
          initialDelaySeconds: 40
          periodSeconds: 10
        readinessProbe:
          exec:
            command:
              - /bin/bash
              - -c
              - nc -z localhost 9443
          initialDelaySeconds: 40
          periodSeconds: 10
        imagePullPolicy: Always
        command: ["/home/wso2carbon/entrypoint.sh"]
        resources:
          requests:
            memory: 1Gi
            cpu: 1000m
          limits:
            memory: 2Gi
            cpu: 2000m
        ports:
        
        - containerPort: 8280
          protocol: TCP
        - containerPort: 8243
          protocol: TCP
        - containerPort: 9763
          protocol: TCP
        - containerPort: 9443
          protocol: TCP
        volumeMounts:
        - name: integrator-bin
          mountPath: /home/wso2carbon/wso2-config-volume/bin
        
        - name: integrator-conf
          mountPath: /home/wso2carbon/wso2-config-volume/conf
        - name: integrator-conf-axis2
          mountPath: /home/wso2carbon/wso2-config-volume/conf/axis2
        - name: integrator-conf-datasources
          mountPath: /home/wso2carbon/wso2-config-volume/conf/datasources
        - name: integrator-conf-entrypoint
          mountPath: /home/wso2carbon/entrypoint.sh
          subPath: docker-entrypoint.sh
      
      serviceAccountName: wso2svc-account
      volumes:
      - name: integrator-conf
        configMap:
          name: integrator-conf
      - name: integrator-conf-axis2
        configMap:
          name: integrator-conf-axis2
      - name: integrator-conf-datasources
        configMap:
          name: integrator-conf-datasources
      - name: integrator-conf-entrypoint
        configMap:
          name: integrator-conf-entrypoint
          defaultMode: 0407
      
      
      - name: integrator-bin
        configMap:
          name: integrator-bin
