wso2-ei/tttt/ei-pattern-1/templates/integrator/integrator-service.yaml
---
# Source: ei-pattern-1/templates/integrator/integrator-service.yaml
# Copyright (c) 2017, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: v1
kind: Service
metadata:
  name: wso2ei-pattern-1-integrator-service
  namespace : wso2-ei
  labels:
    deployment: wso2ei-pattern-1-integrator
    app: wso2ei-pattern-1
    monitoring: jmx
spec:
  selector:
    deployment: wso2ei-pattern-1-integrator
    app: wso2ei-pattern-1
  ports:
  - name: servlet-http
    port: 9763
    targetPort: 9763
    protocol: TCP
  - name: servlet-https
    port: 9443
    targetPort: 9443
    protocol: TCP
